testing download button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<p>Data science professional with experience in data modeling and visualization and implementing Python for machine learning. The General Assembly Data Science Immersive program expanded my knowledge of Python while improving my presentation and analysis skills that I cultivated in my previous positions. I focus on making projects with a balance of efficiency, readability, and being interpretable. I am constantly looking to expand my own knowledge of the world through data and sharing that knowledge with others. Data science allows me to put puts my problem-solving skills to the test, and I in turn learn to make my life easier, more efficient, and more fulfilled. Click on the Resume button to download a copy of my resume.
 									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button icon solid fa-download">Resume</a></li>
+										<li><a href="https://tprich.github.io/" class="button icon solid fa-download" download="Prich_Resume.pdf">Resume</a></li>
 									</ul>
 								</div>
 							</div>
