Debugging download link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<p>Data science professional with experience in data modeling and visualization and implementing Python for machine learning. The General Assembly Data Science Immersive program expanded my knowledge of Python while improving my presentation and analysis skills that I cultivated in my previous positions. I focus on making projects with a balance of efficiency, readability, and being interpretable. I am constantly looking to expand my own knowledge of the world through data and sharing that knowledge with others. Data science allows me to put puts my problem-solving skills to the test, and I in turn learn to make my life easier, more efficient, and more fulfilled. Click on the Resume button to download a copy of my resume.
 									</p>
 									<ul class="actions">
-										<li><a href="https://tprich.github.io/" class="button icon solid fa-download" download="Prich_Resume.pdf">Resume</a></li>
+										<li><a href="https://tprich.github.io/Prich_Resume.pdf" class="button fit icon solid fa-download" download>Resume</a></li>
 									</ul>
 								</div>
 							</div>
@@ -64,34 +64,28 @@
 							<h2>Projects</h2>
 							<p>Coming soon!</p>
 							<div class="features">
+								<!-- Capstone -->
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Lorem ipsum amet</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								<!-- Ames Housing Project -->
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Aliquam sed nullam</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								<!-- Reddit NLP -->
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Sed erat ullam corper</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								<!-- Group Project -->
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
