Updated index and .gitignore

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<p>Data science professional with experience in data modeling and visualization and implementing Python for machine learning. The General Assembly Data Science Immersive program expanded my knowledge of Python while improving my presentation and analysis skills that I cultivated in my previous positions. I focus on making projects with a balance of efficiency, readability, and being interpretable. I am constantly looking to expand my own knowledge of the world through data and sharing that knowledge with others. Data science allows me to put puts my problem-solving skills to the test, and I in turn learn to make my life easier, more efficient, and more fulfilled. Click on the Resume button to download a copy of my resume.
 									</p>
 									<ul class="actions">
-										<li><a href="https://tprich.github.io/Prich_Resume.pdf" class="button fit icon solid fa-download" download>Resume</a></li>
+										<li><a href="https://tprich.github.io/Prich_Resume.pdf" class="button fit" download>Resume</a></li>
 									</ul>
 								</div>
 							</div>
@@ -67,7 +67,7 @@
 								<!-- Capstone -->
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<h3>Board Game Recommender</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<!-- Ames Housing Project -->
@@ -126,13 +126,12 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>Dayton, OH<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">thomasprich.datascience@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -141,10 +140,10 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
@@ -160,7 +159,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Thomas Prich. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
