Updated Resume and index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<p>Data science professional with experience in data modeling and visualization and implementing Python for machine learning. The General Assembly Data Science Immersive program expanded my knowledge of Python while improving my presentation and analysis skills that I cultivated in my previous positions. I focus on making projects with a balance of efficiency, readability, and being interpretable. I am constantly looking to expand my own knowledge of the world through data and sharing that knowledge with others. Data science allows me to put puts my problem-solving skills to the test, and I in turn learn to make my life easier, more efficient, and more fulfilled. Click on the Resume button to download a copy of my resume.
 									</p>
 									<ul class="actions">
-										<li><a href="https://tprich.github.io/Prich_Resume.pdf" class="button fit" download>Resume</a></li>
+										<li><a href="https://tprich.github.io/Prich_Resume_v2.pdf" class="button icon solid fa-download" download>Resume</a></li>
 									</ul>
 								</div>
 							</div>
@@ -68,30 +68,40 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Board Game Recommender</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Coming Soon!</p>
+									<ul class="actions">
+										<li><a class="button primary disabled">Being Updated</a></li>
+									</ul>
 								</section>
 								<!-- Ames Housing Project -->
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Housing Prices - Linear Regression & Kaggle Competition</h3>
+									<p>Coming Soon!</p>
+									<ul class="actions">
+										<li><a class="button primary disabled">Being Updated</a></li>
+									</ul>
 								</section>
 								<!-- Reddit NLP -->
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Natural Language Processing and Reddit</h3>
+									<p>Coming Soon!</p>
+									<ul class="actions">
+										<li><a class="button primary disabled">Being Updated</a></li>
+									</ul>
 								</section>
 								<!-- Group Project -->
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Predicting Covid-19</h3>
+									<p>Coming Soon!</p>
+									<ul class="actions">
+										<li><a class="button primary disabled">Being Updated</a></li>
+									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a class="button primary disabled">Disabled</a></li>
-							</ul>
+							
 						</div>
 					</section>
 
@@ -125,7 +135,7 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
+											<h3>Located</h3>
 											<span>Dayton, OH<br />
 											USA</span>
 										</li>
@@ -133,10 +143,10 @@
 											<h3>Email</h3>
 											<a href="#">thomasprich.datascience@gmail.com</a>
 										</li>
-										<li>
+										<!-- <li> Not going to include unless I get a work number
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
