--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 							<p>Hello, and thank you for visiting my portfolio. Here you will find links to some of my work and resources to learn more about me. Feel free to reach out via any of the methods the Get in Touch section below.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
+								<li><a href="#two" class="button scrolly">Projects</a></li>
+								<li><a href="#three" class="button scrolly">Get in Touch</a></li>
 							</ul>
 						</div>
 					</section>
@@ -62,42 +64,51 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
-							<p>Coming soon!</p>
+							<p>Click on "Learn More" to go to the Github repository for each project.</p>
 							<div class="features">
 								<!-- Capstone -->
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<span class="icon solid major fa-dice"></span>
 									<h3>Board Game Recommender</h3>
-									<p>Coming Soon!</p>
+									<p>Do you like games? Do you want to try a new game but don't know where to start? I felt this way and decided to make an online board game recommender using the data available on <a href="https://boardgamegeek.com" target="_blank" rel="noopener noreferrer">BoardGameGeek</a>. Click on the "Recommender" button to try it out!
+									</p>
 									<ul class="actions">
+										<!-- <li><a href="https://github.com/tprich/Board_Game_Recommender" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
+										<li><a href="https://share.streamlit.io/tprich/board_game_recommender/main/streamlit_app/basic_recommender.py" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li>
 									</ul>
 								</section>
 								<!-- Ames Housing Project -->
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-home"></span>
 									<h3>Housing Prices - Linear Regression & Kaggle Competition</h3>
 									<p>Coming Soon!</p>
 									<ul class="actions">
+										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
+										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
 									</ul>
 								</section>
 								<!-- Reddit NLP -->
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-comment"></span>
 									<h3>Natural Language Processing and Reddit</h3>
 									<p>Coming Soon!</p>
 									<ul class="actions">
+										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
+										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
 									</ul>
 								</section>
 								<!-- Group Project -->
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fa-virus"></span>
 									<h3>Predicting Covid-19</h3>
 									<p>Coming Soon!</p>
 									<ul class="actions">
+										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
+										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
 									</ul>
 								</section>
 							</div>
@@ -141,7 +152,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">thomasprich.datascience@gmail.com</a>
+											<a href="mailto:thomasprich.datascience@gmail.com">thomasprich.datascience@gmail.com</a>
 										</li>
 										<!-- <li> Not going to include unless I get a work number
 											<h3>Phone</h3>
@@ -152,9 +163,9 @@
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/tprich" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/thomas-prich" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
