--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
+<!-- Take a better picture and upload here -->
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -78,37 +79,38 @@
 										<li><a href="https://share.streamlit.io/tprich/board_game_recommender/main/streamlit_app/basic_recommender.py" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li>
 									</ul>
 								</section>
-								<!-- Ames Housing Project -->
-								<section>
-									<span class="icon solid major fa-home"></span>
-									<h3>Housing Prices - Linear Regression & Kaggle Competition</h3>
-									<p>Coming Soon!</p>
-									<ul class="actions">
-										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
-										<li><a class="button primary disabled">Being Updated</a></li>
-										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
-									</ul>
-								</section>
 								<!-- Reddit NLP -->
 								<section>
 									<span class="icon solid major fa-comment"></span>
 									<h3>Natural Language Processing and Reddit</h3>
-									<p>Coming Soon!</p>
+									<p>Two major applications of machine learning, webscrapping and natural language processing, were explored in this project. There were 1,500 posts collected from a couple of <a href="https://reddit.com" target="_blank" rel="noopener noreferrer">Reddit</a> subreddits, <a href="https://www.reddit.com/r/science/" target="_blank" rel="noopener noreferrer">r/Science</a> and <a href="https://www.reddit.com/r/todayilearned/" target="_blank" rel="noopener noreferrer">r/TodayILearned</a>, using <a href="https://github.com/pushshift/api" target="_blank" rel="noopener noreferrer">Pushshift's Reddit API</a>. I then used natural language processing to determine which subreddit the post came from. Visit the Github to learn more.</p>
 									<ul class="actions">
 										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
-										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
 									</ul>
 								</section>
 								<!-- Group Project -->
 								<section>
 									<span class="icon solid major fa-virus"></span>
 									<h3>Predicting Covid-19</h3>
-									<p>Coming Soon!</p>
+									<p>My first group project, we decided to see which model was most effective at predicting the number of new daily Covid-19 cases between March 24th, 2021 and January 1st, 2022. We compared ARIMA and SIR models of predicting cases, and found that ARIMA tended to perform better. Visit the Github repo to learn more about both models and how the predictions were made. You can also check out our group's interactive Tableau dashboard to look at our actual predictions against the actual number of cases from the CDC.</p>
+<!-- Add href link to CDC source. -->
 									<ul class="actions">
 										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
 										<li><a class="button primary disabled">Being Updated</a></li>
-										<!-- <li><a href="" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li> -->
+										<li><a href="https://public.tableau.com/app/profile/thomas.prich/viz/Magic8BallsGroupProject/Dashboard1" class="button" target="_blank" rel="noopener noreferrer">Tableau</a></li>
+									</ul>
+								</section>
+								<!-- Ames Housing Project -->
+								<section>
+									<span class="icon solid major fa-home"></span>
+									<h3>Housing Prices - Linear Regression & Kaggle Competition</h3>
+									<p>Ever try to guess how much a house will sell for? This project focused on creating a linear regression model to predict the sale price of a house in Ames, Iowa. <a href="https://kaggle.com" target="_blank" rel="noopener noreferrer">Kaggle</a> hosts this competition to see who could produce the best model. I only had two weeks to build my model. The best version used 135 features (the majority of which were dummy features) and won my cohort's version of this competition. Visit the Github for the project to learn more or click on the "Competition" button to visit the public version of the House Prices - Advanced Regression Techniques competition.</p>
+									<ul class="actions">
+										<!-- <li><a href="" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li> -->
+										<li><a class="button primary disabled">Being Updated</a></li>
+<!-- Update with my leaderboard position -->
+										<li><a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/" class="button" target="_blank" rel="noopener noreferrer">Competition</a></li>
 									</ul>
 								</section>
 							</div>
@@ -120,7 +122,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Coming Soon!</p>
+							<p>Feel free to send me an email, connect on LinkedIn, or visit my Github below.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
