Fixed recommender link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<ul class="actions">
 										<li><a href="https://github.com/tprich/Board_Game_Recommender" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li>
 										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
-										<li><a href="https://share.streamlit.io/tprich/board_game_recommender/main/streamlit_app/basic_recommender.py" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li>
+										<li><a href="https://share.streamlit.io/tprich/board_game_recommender/main/streamlit_app/recommender_app.py" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li>
 									</ul>
 								</section>
 								<!-- Reddit NLP -->
@@ -121,7 +121,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
 							<p>Feel free to send me an email, connect on LinkedIn, or visit my Github below.</p>
 							<!-- <div class="split style1"> UNCOMMENT IF SOMEONE FIGURES OUT HOW TO USE CONTACT US FORM-->
 								<!-- <section>
