Updated index, added headshot, and updated resume.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 <!-- Take a better picture and upload here -->
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/headshot.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Thomas Prich</h2>
 									<p>Data science professional with experience in data modeling and visualization and implementing Python for machine learning. The General Assembly Data Science Immersive program expanded my knowledge of Python while improving my presentation and analysis skills that I cultivated in my previous positions. I focus on making projects with a balance of efficiency, readability, and being interpretable. I am constantly looking to expand my own knowledge of the world through data and sharing that knowledge with others. Data science allows me to put my problem-solving skills to the test, and I in turn learn to make my life easier, more efficient, and more fulfilled. Click on the Resume button to download a copy of my resume.
 									</p>
 									<ul class="actions">
-										<li><a href="https://tprich.github.io/Prich_Resume_v2.pdf" class="button icon solid fa-download" download>Resume</a></li>
+										<li><a href="https://tprich.github.io/Prich_Resume_Final.pdf" class="button icon solid fa-download" download>Resume</a></li>
 									</ul>
 								</div>
 							</div>
@@ -71,10 +71,13 @@
 								<section>
 									<span class="icon solid major fa-dice"></span>
 									<h3>Board Game Recommender</h3>
-									<p>Do you like games? Do you want to try a new game but don't know where to start? I felt this way and decided to make an online board game recommender using the data available on <a href="https://boardgamegeek.com" target="_blank" rel="noopener noreferrer">BoardGameGeek</a>. Click on the "Recommender" button to try it out!
+									<p>Do you like games? Do you want to try a new game but don't know where to start? I felt this way and decided to make an online board game recommender using the data available on <a href="https://boardgamegeek.com" target="_blank" rel="noopener noreferrer">BoardGameGeek</a>. Built using Python and Scikit-Learn, this recommender allows you to filter through the top 1,000 board games. Click on the "Recommender" button to try it out!
 									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/tprich/Board_Game_Recommender" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li>
+										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
+									</ul>
+									<ul class="actions">
 										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
 										<li><a href="https://share.streamlit.io/tprich/board_game_recommender/main/streamlit_app/recommender_app.py" class="button" target="_blank" rel="noopener noreferrer">Recommender</a></li>
 									</ul>
@@ -98,6 +101,9 @@
 									<ul class="actions">
 										<li><a href="https://github.com/tprich/covid_prediction_models" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li>
 										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
+									</ul>
+									<ul class="actions">
+										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
 										<li><a href="https://public.tableau.com/app/profile/thomas.prich/viz/Magic8BallsGroupProject/Dashboard1" class="button" target="_blank" rel="noopener noreferrer">Tableau</a></li>
 									</ul>
 								</section>
@@ -108,6 +114,9 @@
 									<p>Ever try to guess how much a house will sell for? This project focused on creating a linear regression model to predict the sale price of a house in Ames, Iowa. <a href="https://kaggle.com" target="_blank" rel="noopener noreferrer">Kaggle</a> hosts this competition to see who could produce the best model. I only had two weeks to build my model. The best version used 135 features (the majority of which were dummy features) and won my cohort's version of this competition. Visit the Github for the project to learn more or click on the "Competition" button to visit the public version of the House Prices - Advanced Regression Techniques competition.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/tprich/house_price_modeling" class="button primary" target="_blank" rel="noopener noreferrer">Learn More</a></li>
+										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
+									</ul>
+									<ul class="actions">
 										<!-- <li><a class="button primary disabled">Being Updated</a></li> -->
 <!-- Update with my leaderboard position -->
 										<li><a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/" class="button" target="_blank" rel="noopener noreferrer">Competition</a></li>
@@ -123,8 +132,8 @@
 						<div class="inner">
 							<h2>Get in Touch</h2>
 							<p>Feel free to send me an email, connect on LinkedIn, or visit my Github below.</p>
-							<!-- <div class="split style1"> UNCOMMENT IF SOMEONE FIGURES OUT HOW TO USE CONTACT US FORM-->
-								<!-- <section>
+							<div class="split style2">
+								<!-- <section> Uncomment if someone figures out how to get working
 									<form method="post" action="mailto:thomasprich.datascience@gmail.com">
 										<div class="fields">
 											<div class="field half">
@@ -148,11 +157,6 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Located</h3>
-											<span>Dayton, OH<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
 											<a href="mailto:thomasprich.datascience@gmail.com">thomasprich.datascience@gmail.com</a>
 										</li>
@@ -160,7 +164,10 @@
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
 										</li> -->
-										<li>
+									</ul>
+								</section>
+								<section>
+									<ul class="contact">
 											<h3>Social</h3>
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
@@ -172,7 +179,16 @@
 										</li>
 									</ul>
 								</section>
-							<!-- </div> UNCOMMENT IF SOMEONE FIGURES OUT HOW TO GET CONTACT US WORKING-->
+								<!-- <section>
+									<ul class="contact">
+										<li>
+											<h3>Located</h3>
+											<span>Dayton, OH<br />
+											USA</span>
+										</li>
+									</ul>
+								</section> -->
+							</div>
 						</div>
 					</section>
 
